Client server communication (#7)
* Client -> server wip

* Java proto builds

* Working :D

* Client updates & settings

* Create device ID

* Client deadline

* Fix deadline

* Force grpc version

* Fix string formatting version incompatibility + log performance

* Permissions version guards

* Remove unneeded versions